[package]
name = "cawcaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./", "proto"]

[dependencies]
tokio = {version = "1", features = ["full"] }
tokio-native-tls = "0.3"
bytes = "1.4"
tokio-util = { version = "0.7", features = ["full"] }
futures-util = "0.3"
pin-project = "1"
proto = { path = "proto"}
trust-dns-resolver = "*"
async-trait = "0.1.67"
thiserror = "1"
figment = { version = "0.10", features= ["toml","env"]}
serde = {version="1", features=["derive"]}
toml = "0.5"
